# glodap3-methods

./: .gitignore  .zenodo.json  README.md  fig01_trends.py  fig02_regional_clusters.py  fig03_network.py  fig04_ff_vs_wlsq.py  inversion.py  pyproject.toml
.github/workflows/: tests.yml
data/: DIC_KeyInfo_null.csv  WLSQ.csv
data/read/: DIC_preadj.txt  cruises.parquet
g3m/: real_dic.py  simulate.py
