[project]
name = "glodap3-methods"
version = "0.2"
description = "Analysis and figures accompanying the GLODAPv3 methods paper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["xover>=2.0.0,<3"]

[tool.ruff]
line-length = 79

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=7.2.0,<8"
matplotlib = ">=3.10.9,<4"
pyarrow = ">=24.0.0,<25"
pygraphviz = ">=1.14,<2"
colormaps = ">=0.4.2,<0.5"
networkx = ">=3.6.1,<4"
